--- a/06_02_images_style/page.css
+++ b/06_02_images_style/page.css
@@ -20,24 +20,19 @@
 	max-width: 300px;
 	border: 10px solid orangered;
 }
-
-/*1. change the display to: block*/
-/*2. set width and height as: 200px*/
-/*3. center image with margin*/
-/*4. round the image with border-radius*/
-/*5. create a border: 1px solid #aaa*/
-/*6. shift the image up with margin-top: -100px*/
 .my-face{
-	
-
-
-
-
-
+	display: block;				/*1. change the display to: block*/
+	width: 200px; 				/*2. set width and height as: 200px*/
+	height: 200px;				
+	margin-left: auto;			/*3. center image with margin*/
+	margin-right: auto;
+	border-radius: 50%;			/*4. round the image with border-radius*/
+	border: 1px solid #aaa;		/*5. create a border: 1px solid #aaa*/
+	margin-top: -100px;			/*6. shift the image up with margin-top: -100px*/
 }
 
 /*stripe generator: http://www.stripegenerator.com/*/
 /*7. set background image as: stripe_background.png*/
 .my-body{
-	
+	background-image: url("stripe_background.png")
 }
