--- a/assignment/elmo_page.css
+++ b/assignment/elmo_page.css
@@ -5,29 +5,40 @@
     background-attachment: fixed;
 }
 .my-container{
-	background-color: 	rgb(255, 240, 101);
-	/*max-width: 600px;*/
-	margin: 50px 150px;
+	background-color:rgba(248, 232, 88, 0.95);
+	max-width: 1000px;
+	margin: 50px auto;
 	padding: 2rem;
-	/*box-shadow: 5px 5px 5px rgba(0,0,0,0.1);*/
-    font-family: "Lato";
+	box-shadow: 5px 10px 10px rgba(0,0,0,0.7);
+    font-family: "Lato", serif;
     font-size: 15px;
+    border-radius: 20px;
+}
+.navbar{
+    margin-bottom: -15px;
+}
+@media (max-width: 600px) {
+    .my-container{
+        font-size: 10px;
+    }
 }
 .row{
 	background-color: white;
-	margin: 15px 5px ; 
-	border-radius: 25px;
+	margin: 18px 3px ; 
+	border-radius: 20px;
 	border: 5px solid #ff1919;
-	padding: 1em 2em;
+	padding: 1em 1em;
 }
 .my-face{
     display: block;
 	width: 260px;
-    margin-right: 1px;
-    padding: 0 5px
+    padding: 1em
 }
 h3{
     background-color: rgb(255, 81, 0);
     color: white;
     text-align: center
+}
+a:hover{
+    background-color: orange
 }
